# sibylengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt
Engine/pybind/: CMakeLists.txt  py.core.cpp  se.rhi.cuda.cpp  se.rhi.cuda.hpp
Engine/scripts/: copy_built.py
Engine/source/core/: CMakeLists.txt
Engine/source/core/addon/bxdf-microfacet/: se.bxdf.microfacet.cpp  se.bxdf.microfacet.hpp
Engine/source/core/addon/bxdf-rgl/: se.bxdf.rglbrdf.cpp  se.bxdf.rglbrdf.hpp
Engine/source/core/addon/pass-editor/: ex.pass.editor.cpp  ex.pass.editor.hpp
Engine/source/core/addon/pass-postprocess/: ex.pass.postprocess.hpp
Engine/source/core/include/: se.editor.hpp  se.gfx.hpp  se.math.hpp  se.rdg.hpp  se.rhi.hpp  se.utils.hpp
Engine/source/core/source/: ex.tinyprbrtloader.cpp  ex.tinyprbrtloader.hpp  se.editor.cpp  se.editor.frags.cpp  se.editor.helper.hpp  se.gfx.components.cpp  se.gfx.image.cpp  se.gfx.materials.cpp  se.gfx.resources.cpp  se.gfx.scene-ext.cpp  se.gfx.scene-gltf.cpp  se.gfx.scene-gpu.cpp  se.gfx.scene-lightbvh.cpp  se.gfx.scene-loader.hpp  se.gfx.scene-pbrt.cpp  se.gfx.scene-xml.cpp  se.gfx.scene.cpp  se.init.cpp  se.math.cpp  se.math.mat.hpp  se.math.misc.hpp  se.math.vec.hpp  se.rdg.cpp  se.rhi.cpp  se.utils.cpp
Examples/: CMakeLists.txt
Examples/example-cpp-editor/: CMakeLists.txt  runtime.config
Examples/example-cpp-editor/shaders/: add-test.slang
Examples/example-cpp-editor/src/: main.cpp
Examples/example-py-editor/: main.py  runtime.config
Examples/example-py-interoperation/: example1-square.py
Examples/example-py-interoperation/shaders/: square.slang
release/: .gitignore  setup.py
release/sibylengine/: __init__.py  __init__.pyi  common.py
release/sibylengine/layouts/: default.ini  new-layout.ini
